# Mesh-Parameterization

./: .gitignore  CMakeLists.txt  README.md  linker.h  main.cpp
examples/: 106_gui.cpp  109_gui.cpp  111_texture.cpp  205_laplacian.cpp  303_LaplaceEqn.cpp  304_EnergyLaplaceEqn.cpp  501-harmonicWeights.cpp  502_LSCM.cpp
include/: common.hpp  graph.hpp  parameterization.hpp
